src/test/deca/context/invalid/created/return/return_float_bool.deca
// Description :
//    return mauvais type : bool, demandé float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (2.7) Type de retour effectif : boolean déclaré : float

class A{
float met(){
return true;
}
}